# GPUSimulation

./: .gitignore  AGENTS.md  README.md  TASKS.md  pyproject.toml
docs/superpowers/plans/: 2026-04-02-phase31-scaling-real-collection.md  2026-04-02-phase32-a40-error-analysis.md
predictor/: __init__.py  types.py
predictor/analytical/: __init__.py  baseline.py  decomposer.py  features.py  scheduler.py
predictor/extractor/: __init__.py  base.py  metadata.py
predictor/models/: __init__.py  residual.py  uncertainty.py
predictor/recognizer/: __init__.py  base.py  heuristic.py
predictor/serving/: __init__.py  __main__.py  aggregate.py  cli.py  predict.py
predictor/training/: __init__.py  analysis.py  dataset.py  evaluator.py  io.py  profiling.py  trainer.py
scripts/: analyze_phase32_holdout.py  collect_phase31_gemm_data.py  collect_phase3_gemm_data.py  demo_phase1.py  demo_phase2_gemm.py  demo_phase3_residual.py  eval_phase3_residual.py  run_phase31_validation.py  run_phase3_validation.py  train_phase3_residual.py
tests/: test_analysis.py  test_baseline.py  test_decomposer.py  test_extractor.py  test_feature_analyzer.py  test_integration_phase1.py  test_integration_phase2.py  test_integration_phase3.py  test_integration_phase31.py  test_integration_phase32.py  test_predictor_models.py  test_profiling.py  test_recognizer.py  test_residual_serving.py  test_scheduler.py  test_serving.py  test_training.py
